# single-cell-chinese-restaurant-process-variational-inference

./: main.py  notebook.ipynb  pyproject.toml
